# MarkdownOpt

backend/: .gitignore  main.py  pyproject.toml
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  optimize.py
backend/app/config/: settings.py
backend/app/core/: Exceptions.py  LLMFactory.py  LLMWrapper.py  MyPtompts.py  config.py
backend/app/models/: AIModelConfig.py  OptModels.py  response.py
backend/app/services/: AIService.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/.next/: prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: _error.js  _pages-dir-browser_node_modules_next_dist_pages__app_js.js  _pages-dir-browser_node_modules_next_dist_pages__error_js.js  react-refresh.js  webpack.js
frontend/.next/static/chunks/pages/: _app.js  _error.js
frontend/.next/types/: routes.d.ts  validator.ts
frontend/src/: App.tsx  index.css
frontend/src/components/AISetModel/: ModelForm.tsx  ModelList.tsx  ModelPreviewItem.tsx  index.tsx  vm.ts
frontend/src/components/Markdown/: MarkdownInput.tsx  MarkdownRender.tsx  ToolBar.tsx
frontend/src/hooks/: useDebounce.ts  useEventListener.ts  useThrottle.ts
frontend/src/models/: AIModelConfig.ts  AIModels.ts  OptimizeModels.ts
frontend/src/pages/: MarkdownEditor.tsx
frontend/src/services/: AppVM.ts  aiService.ts  api.ts
frontend/src/types/: react-syntax-highlighter.d.ts
frontend/src/utils/: EventEmitter.ts
