[project]
name = "markopt-backend"
version = "0.1.0"
description = "MarkOpt backend API service"
authors = [
    {name = "Royce",email = "roycelang24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9 <=3.12.7"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
